--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <link href="/public/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,18 +20,18 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Sign Up Form</h2>
-        <form class="signup">
+        <form class="signup" action="/api/signup" method="POST">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
+            <input type="email" class="form-control" id="email-input" placeholder="Email" name="email">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <input type="password" class="form-control" id="password-input" placeholder="Password" name="password">
           </div>
           <div class="form-group">
             <label for="exampleInputName1">Name</label>
-            <input type="name" class="form-control" id="name-input" placeholder="Name">
+            <input type="name" class="form-control" id="name-input" placeholder="Name" name="name">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -46,7 +46,6 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/signup.js"></script>
 
 </body>
 
