--- a/views/members.ejs
+++ b/views/members.ejs
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Welcome <%=user.email%></h1>
+          <h1 class="mb-5">Welcome <%=user.name%></h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
