--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <title>Passport Authentication</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="/public/css/style.css" rel="stylesheet">
-</head>
+  <%- include("layouts/header")%>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-light bg-light static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Show Time - TV Series Manager</a>
+      <a class="btn btn-primary" href="/signup">Signup</a>
     </div>
   </nav>
+
+
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col">
+        <!-- test -->
+      </div>
+      <div class="col-6 login-signup-form">
         <h2>Login Form</h2>
         <form class="login" action="/api/login" method="POST">
           <div class="form-group">
@@ -29,16 +30,54 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password" name="password">
           </div>
-          <button type="submit" class="btn btn-default">Login</button>
+          <button type="submit" class="btn btn-primary">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/signup">here</a></p>
+        <!-- <p>Or sign up <a href="/signup">here</a></p> -->
+      </div>
+      <div class="col">
+        <!-- test -->
       </div>
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <!-- Icons Grid -->
+   <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3>Sign up</h3>
+            <p class="lead mb-0">Sign up our free membership</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3>Search</h3>
+            <p class="lead mb-0">Featuring the latest release of the new movies and TV series!</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3>Save</h3>
+            <p class="lead mb-0">Save your favourite movie to watch list!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <%- include("layouts/footer")%>
+  <%- include("layouts/scripts")%>
 </body>
 
 </html>
