--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <title>Passport Authentication</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="/public/css/style.css" rel="stylesheet">
-</head>
+  <%- include("layouts/header")%>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
-    </div>
-  </nav>
+ 
+ <!-- Navigation -->
+ <%- include("layouts/navbar", { user: user})%>
+
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col">
+        <!-- test -->
+      </div>
+      <div class="col-6 login-signup-form">
         <h2>Sign Up Form</h2>
         <form class="signup" action="/api/signup" method="POST">
           <div class="form-group">
@@ -37,15 +32,54 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
+          <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
         <br />
-        <p>Or log in <a href="/login">here</a></p>
+        <!-- <p>Or log in <a href="/login">here</a></p> -->
+      </div>
+      <div class="col">
+        <!-- test -->
       </div>
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Icons Grid -->
+  <section class="features-icons bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+            </div>
+            <h3>Sign up</h3>
+            <p class="lead mb-0">Sign up our free membership</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-layers m-auto text-primary"></i>
+            </div>
+            <h3>Search</h3>
+            <p class="lead mb-0">Featuring the latest release of the new movies and TV series!</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-check m-auto text-primary"></i>
+            </div>
+            <h3>Save</h3>
+            <p class="lead mb-0">Save your favourite movie to watch list!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <%- include("layouts/footer")%>
+  <%- include("layouts/scripts")%>
 
 </body>
 
