update testimonial and signup page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -43,35 +43,30 @@
     </div>
   </div>
 
-  <!-- Icons Grid -->
-  <section class="features-icons bg-light text-center">
+  <!-- Testimonials -->
+  <section class="testimonials text-center bg-light">
     <div class="container">
+      <h2 class="mb-5">What people are saying...</h2>
       <div class="row">
         <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
-            </div>
-            <h3>Sign up</h3>
-            <p class="lead mb-0">Sign up our free membership</p>
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-1.jpg" alt="">
+            <h5>Sheriff Woody</h5>
+            <p class="font-weight-light mb-0">"This is the best series manager I have ever used!"</p>
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
-            </div>
-            <h3>Search</h3>
-            <p class="lead mb-0">Featuring the latest release of the new movies and TV series!</p>
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-2.jpg" alt="">
+            <h5>Buzz Lightyear</h5>
+            <p class="font-weight-light mb-0">"Show Time is amazing. I've been using it to save lots of my favourite TV series."</p>
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
-            </div>
-            <h3>Save</h3>
-            <p class="lead mb-0">Save your favourite movie to watch list!</p>
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-3.jpg" alt="">
+            <h5>Slinky Dog</h5>
+            <p class="font-weight-light mb-0">"Thanks so much for creating this user friendly app! It's so useful!"</p>
           </div>
         </div>
       </div>
