--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
   
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Show Time - TV Series Manager</title>
   
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
