--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,6 +13,7 @@
       <div class="col">
         <!-- test -->
       </div>
+
       <div class="col-6 login-signup-form">
         <h2>Sign Up Form</h2>
         <form class="signup" action="/api/signup" method="POST">
@@ -37,42 +38,14 @@
         <br />
         <!-- <p>Or log in <a href="/login">here</a></p> -->
       </div>
+
       <div class="col">
         <!-- test -->
       </div>
     </div>
   </div>
 
-  <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
-    <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-1.jpg" alt="">
-            <h5>Sheriff Woody</h5>
-            <p class="font-weight-light mb-0">"This is the best series manager I have ever used!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-2.jpg" alt="">
-            <h5>Buzz Lightyear</h5>
-            <p class="font-weight-light mb-0">"Show Time is amazing. I've been using it to save lots of my favourite TV series."</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-3.jpg" alt="">
-            <h5>Slinky Dog</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for creating this user friendly app! It's so useful!"</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  <%- include("layouts/testimonials")%>
   <%- include("layouts/footer")%>
   <%- include("layouts/scripts")%>
 
