--- a/views/layouts/scripts.ejs
+++ b/views/layouts/scripts.ejs
@@ -2,3 +2,4 @@
 <script src="/vendor/jquery/jquery.min.js"></script>
 <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/searchAjax.js"></script>
