--- a/views/members.ejs
+++ b/views/members.ejs
@@ -16,13 +16,13 @@
           <h1 class="mb-5">Welcome <%=user.name%></h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
+          <form class="search-form">
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Search series here...">
+                <input type="text" class="form-control form-control-lg movie-input" placeholder="Search series here..." name="search-item">
               </div>
               <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary" href="/">Search!</button>
+                <button type="submit" class="btn btn-block btn-lg btn-primary search-tv-btn">Search!</button>
               </div>
             </div>
           </form>
@@ -30,6 +30,8 @@
       </div>
     </div>
   </header>
+
+  <div class="render-movie"></div>
 
   <%- include("layouts/iconsGrid")%>
   <%- include("layouts/imageShowcase")%>
