--- a/views/members.ejs
+++ b/views/members.ejs
@@ -13,7 +13,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Welcome <%=user.name%></h1>
+          <h1 class="mb-5">Welcome <%=user.name%>
+          this is your tv show <%= tvShows[0].seriesUUID %></h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form class="search-form">
