added popup.ejs, ajax call, changed images, and deleted part of data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Search TV series here! <br> Please login first</h1>
+          <h1 class="mb-5">Search movies here! <br> Please login first</h1>
         </div>
       </div>
     </div>
@@ -22,7 +22,6 @@
   <%- include("layouts/iconsGrid")%>
   <%- include("layouts/imageShowcase")%>
   <%- include("layouts/testimonials")%>
-  <%- include("layouts/question")%>
   <%- include("layouts/footer")%>
   <%- include("layouts/scripts")%>
 </body>
