--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
   
-    <title>Show Time - TV Series Manager</title>
+    <title>Show Time - Movie Manager</title>
   
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +17,7 @@
   
     <!-- Custom styles for this template -->
     <link href="/css/landing-page.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- <link href="/public/css/style.css" rel="stylesheet"> -->
   
   </head>
