--- a/views/layouts/iconsGrid.ejs
+++ b/views/layouts/iconsGrid.ejs
@@ -26,7 +26,7 @@
               <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
             <h3>Enjoy</h3>
-            <p class="lead mb-0">Enjoy!</p>
+            <p class="lead mb-0">Review what you want to watch next on your list and enjoy!</p>
           </div>
         </div>
       </div>
