--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -3,7 +3,9 @@
 <!-- log out navbar -->
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Show Time - TV Series Manager</a>
+        <a class="navbar-brand" href="#">Show Time - Movie Manager</a>
+        <!-- <a class="btn btn-primary navbar-mylist-btn" href="/myList">My list</a> -->
+        <a class="btn btn-primary navbar-mylist-popup-btn" data-popup-target="#popup" style="color: white;">My list</a>
         <a class="btn btn-primary" href="/logout">Log out</a>
     </div>
 </nav>
@@ -13,7 +15,7 @@
 <!-- login navbar -->
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Show Time - TV Series Manager</a>
+        <a class="navbar-brand" href="#">Show Time - Movie Manager</a>
         <a class="btn btn-primary" href="/login">Log In</a>
     </div>
 </nav>
