--- a/views/layouts/imageShowcase.ejs
+++ b/views/layouts/imageShowcase.ejs
@@ -5,22 +5,22 @@
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <h2>Gain Your Movie Knowledge</h2>
+          <p class="lead mb-0">When you use Show Time Movie Manager, you know that you will be able to find all sorts of movie information here!</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('/img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <h2>Save Your Favourite Movie</h2>
+          <p class="lead mb-0">New improved! Now you can save your favouriet movies to your very own list!</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/img/bg-showcase-3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+          <h2>Easy to Use</h2>
+          <p class="lead mb-0">All you need to do is signup, login, search and save!</p>
         </div>
       </div>
     </div>
