--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Show Time - TV Series Manager</a>
+      <a class="navbar-brand" href="#">Show Time - Movie Manager</a>
       <a class="btn btn-primary" href="/signup">Signup</a>
     </div>
   </nav>
