update webpage name

--- a/views/layouts/iconsGrid.ejs
+++ b/views/layouts/iconsGrid.ejs
@@ -8,7 +8,7 @@
               <i class="icon-layers m-auto text-primary"></i>
             </div>
             <h3>Search</h3>
-            <p class="lead mb-0">Featuring the latest release of the new movies and TV series!</p>
+            <p class="lead mb-0">Featuring the latest release of the new movies!</p>
           </div>
         </div>
         <div class="col-lg-4">
