--- a/views/layouts/imageShowcase.ejs
+++ b/views/layouts/imageShowcase.ejs
@@ -6,14 +6,14 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Gain Your Movie Knowledge</h2>
-          <p class="lead mb-0">When you use Show Time Movie Manager, you know that you will be able to find all sorts of movie information here!</p>
+          <p class="lead mb-0">When you use Want to Watch Movie Manager, you know that you will be able to find all sorts of movie information here!</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('/img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Save Your Favourite Movie</h2>
-          <p class="lead mb-0">New improved! Now you can save your favouriet movies to your very own list!</p>
+          <p class="lead mb-0">New improved! Now you can save your favourite movies to your very own list!</p>
         </div>
       </div>
       <div class="row no-gutters">
