--- a/views/layouts/testimonials.ejs
+++ b/views/layouts/testimonials.ejs
@@ -7,14 +7,14 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-1.jpg" alt="">
             <h5>Sheriff Woody</h5>
-            <p class="font-weight-light mb-0">"This is the best series manager I have ever used!"</p>
+            <p class="font-weight-light mb-0">"This is the best movie manager I have ever used!"</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="/img/testimonials-2.jpg" alt="">
             <h5>Buzz Lightyear</h5>
-            <p class="font-weight-light mb-0">"Show Time is amazing. I've been using it to save lots of my favourite TV series."</p>
+            <p class="font-weight-light mb-0">"Want to Watch Movie Manager is amazing. I've been using it to save lots of my favourite movies."</p>
           </div>
         </div>
         <div class="col-lg-4">
