--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -3,8 +3,7 @@
 <!-- log out navbar -->
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Show Time - Movie Manager</a>
-        <!-- <a class="btn btn-primary navbar-mylist-btn" href="/myList">My list</a> -->
+        <a class="navbar-brand" href="#">Want to Watch Movie Manager</a>
         <a class="btn btn-primary navbar-mylist-popup-btn" data-popup-target="#popup" style="color: white;">My list</a>
         <a class="btn btn-primary" href="/logout">Log out</a>
     </div>
@@ -15,7 +14,7 @@
 <!-- login navbar -->
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Show Time - Movie Manager</a>
+        <a class="navbar-brand" href="#">Want to Watch Movie Manager</a>
         <a class="btn btn-primary" href="/login">Log In</a>
     </div>
 </nav>
