--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Show Time - Movie Manager</a>
+      <a class="navbar-brand" href="#">Want to Watch Movie Manager</a>
       <a class="btn btn-primary" href="/signup">Signup</a>
     </div>
   </nav>
@@ -16,7 +16,6 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <!-- test -->
       </div>
       <div class="col-6 login-signup-form">
         <h2>Login Form</h2>
@@ -32,10 +31,8 @@
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
         <br />
-        <!-- <p>Or sign up <a href="/signup">here</a></p> -->
       </div>
       <div class="col">
-        <!-- test -->
       </div>
     </div>
   </div>
