--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -4,8 +4,10 @@
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
         <a class="navbar-brand" href="#">Want to Watch Movie Manager</a>
+        <form class="form-inline ml-auto">
         <a class="btn btn-primary navbar-mylist-popup-btn" data-popup-target="#popup" style="color: white;">My list</a>
         <a class="btn btn-primary" href="/logout">Log out</a>
+        </form>
     </div>
 </nav>
 
